@@ -48,6 +48,7 @@ exportMethods(coef)
 exportMethods(coefficients)
 exportMethods(deviance)
 exportMethods(df.residual)
+exportMethods(extract)
 exportMethods(fitted)
 exportMethods(fitted.values)
 exportMethods(formula)
