@@ -1,3 +1,7 @@
+Tue April 26 2016
+1. Changes
+   * Add initial support for model comparison tables via the texreg package
+
 Thu April 21 2016
 1. Changes
    * Allow variables that contain a "." character to work with formulae
